Update for new URL

--- a/gesah-installer/home/src/main/resources/config/runtime.properties
+++ b/gesah-installer/home/src/main/resources/config/runtime.properties
@@ -9,6 +9,10 @@
 #
 # -----------------------------------------------------------------------------
 
+#iiif.url.base = http://gesah01.develop.labs.tib.eu:8080/gesah-iiif
+iiif.url.base = https://osl.tib.eu/gesah-iiif
+iiif.slash = ^
+
 # 
 # This namespace will be used when generating URIs for objects created in the 
 # editor. In order to serve linked data, the default namespace must be composed 
