--- a/gesah-installer/home/pom.xml
+++ b/gesah-installer/home/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>eu.tib.osl</groupId>
     <artifactId>gesah-installer-home</artifactId>
-    <version>1.11.0-SNAPSHOT</version>
+    <version>1.12.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>eu.tib.osl</groupId>
         <artifactId>gesah-installer</artifactId>
-        <version>1.11.0-SNAPSHOT</version>
+        <version>1.12.3-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -103,7 +103,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>eu.tib.osl</groupId>
+            <groupId>org.vivoweb</groupId>
             <artifactId>vitro-home</artifactId>
             <type>tar.gz</type>
         </dependency>
