--- a/gesah-installer/webapp/pom.xml
+++ b/gesah-installer/webapp/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>eu.tib.osl</groupId>
     <artifactId>gesah-installer-webapp</artifactId>
-    <version>1.11.0-SNAPSHOT</version>
+    <version>1.12.3-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>eu.tib.osl</groupId>
         <artifactId>gesah-installer</artifactId>
-        <version>1.11.0-SNAPSHOT</version>
+        <version>1.12.3-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -40,7 +40,7 @@
                             <archiveClasses>false</archiveClasses>
                             <overlays>
                                 <overlay>
-                                    <groupId>eu.tib.osl</groupId>
+                                    <groupId>org.vivoweb</groupId>
                                     <artifactId>vitro-webapp</artifactId>
                                     <type>war</type>
                                 </overlay>
@@ -139,11 +139,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>eu.tib.osl</groupId>
+            <groupId>org.vivoweb</groupId>
             <artifactId>vitro-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>eu.tib.osl</groupId>
+            <groupId>org.vivoweb</groupId>
             <artifactId>vitro-webapp</artifactId>
             <type>war</type>
         </dependency>
