--- a/gesah-installer/home/pom.xml
+++ b/gesah-installer/home/pom.xml
@@ -106,6 +106,12 @@
             <groupId>org.vivoweb</groupId>
             <artifactId>vitro-home</artifactId>
             <type>tar.gz</type>
-        </dependency>
+    </dependency>
+    <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vitro-languages-home-core</artifactId>
+            <version>${project.version}</version>
+            <type>pom</type>
+    </dependency>
     </dependencies>
 </project>
