--- a/gesah-installer/webapp/pom.xml
+++ b/gesah-installer/webapp/pom.xml
@@ -154,6 +154,11 @@
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
