--- a/gesah-installer/webapp/pom.xml
+++ b/gesah-installer/webapp/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>eu.tib.osl</groupId>
     <artifactId>gesah-installer-webapp</artifactId>
-    <version>1.12.3-SNAPSHOT</version>
+    <version>1.13.0</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>eu.tib.osl</groupId>
         <artifactId>gesah-installer</artifactId>
-        <version>1.12.3-SNAPSHOT</version>
+        <version>1.13.0</version>
         <relativePath>..</relativePath>
     </parent>
 
