encoded iiif separator

--- a/gesah-installer/home/src/main/resources/config/runtime.properties
+++ b/gesah-installer/home/src/main/resources/config/runtime.properties
@@ -11,7 +11,7 @@
 
 #iiif.url.base = http://gesah01.develop.labs.tib.eu:8080/gesah-iiif
 iiif.url.base = https://osl.tib.eu/gesah-iiif
-iiif.slash = ^
+iiif.slash = %5E
 
 # 
 # This namespace will be used when generating URIs for objects created in the 
