fixes for default runtime.properties

--- a/gesah-installer/home/src/main/resources/config/runtime.properties
+++ b/gesah-installer/home/src/main/resources/config/runtime.properties
@@ -34,7 +34,7 @@ Vitro.defaultNamespace = https://vivo.tib.eu/gesah/individual/
 # above) + "solr"
 #   Example:
 #     vitro.local.solr.url = http://localhost:8080/vitrosolr
-vitro.local.solr.url = http://localhost:8080/gesahsolr
+vitro.local.solr.url = http://localhost:8983/solr/gesah
 
 #
 # Email parameters which VIVO can use to send mail. If these are left empty, 
@@ -49,9 +49,9 @@ email.replyTo = vivo@localhost
 # URL to reflect your database name (if it is not "vitro"). Change the username 
 # and password to match the authorized user you created in MySQL.
 #
-VitroConnection.DataSource.url = jdbc:mysql://localhost/vivogesah?useSSL=false&rewriteBatchedStatements=true
-VitroConnection.DataSource.username = vivo
-VitroConnection.DataSource.password = vivo4tib
+#VitroConnection.DataSource.url = jdbc:mysql://localhost/vivogesah?useSSL=false&rewriteBatchedStatements=true
+#VitroConnection.DataSource.username = vivo
+#VitroConnection.DataSource.password = vivo4tib
 
 #
 # The maximum number of active connections in the database connection pool.
@@ -70,9 +70,9 @@ VitroConnection.DataSource.pool.maxIdle = 10
 # Parameters to change in order to use VIVO with a database other than 
 # MySQL.
 #
-VitroConnection.DataSource.dbtype = MySQL
-VitroConnection.DataSource.driver = com.mysql.jdbc.Driver
-VitroConnection.DataSource.validationQuery = SELECT 1
+#VitroConnection.DataSource.dbtype = MySQL
+#VitroConnection.DataSource.driver = com.mysql.jdbc.Driver
+#VitroConnection.DataSource.validationQuery = SELECT 1
 
 #
 # The email address of the root user for the VIVO application. The password 
