changed individual prefix

--- a/gesah-installer/home/src/main/resources/config/runtime.properties
+++ b/gesah-installer/home/src/main/resources/config/runtime.properties
@@ -24,7 +24,7 @@ iiif.slash = %5E
 #
 # http://vivo.cornell.edu/individual/
 #
-Vitro.defaultNamespace = https://vivo.tib.eu/gesah/individual/
+Vitro.defaultNamespace = https://sah.tib.eu/individual/
 
 # 
 # URL of Solr context used in local Vitro search. This will usually consist of:
