fixed iiif in runtime properties

--- a/gesah-installer/home/src/main/resources/config/runtime.properties
+++ b/gesah-installer/home/src/main/resources/config/runtime.properties
@@ -10,7 +10,7 @@
 # -----------------------------------------------------------------------------
 
 #iiif.url.base = http://gesah01.develop.labs.tib.eu:8080/gesah-iiif
-iiif.url.base = https://osl.tib.eu/gesah-iiif
+iiif.url.base = https://sah.tib.eu
 iiif.slash = %5E
 
 # 
