--- a/gesah-installer/pom.xml
+++ b/gesah-installer/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>eu.tib.osl</groupId>
     <artifactId>gesah-installer</artifactId>
-    <version>1.14.0</version>
+    <version>1.14.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Gesah Installer</name>
